tests/run-pass/move-uninit-primval.rs
#![allow(deprecated)]

struct Foo {
    _inner: i32,
}

fn main() {
    unsafe {
        let foo = Foo {
            _inner: std::mem::uninitialized(),
        };
        let _bar = foo;
    }
}
